# fboxcli

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml.example
docs/: README.md  api-reference.md  architecture.md  commands.md  configuration.md  getting-started.md
npm/: .gitignore
npm/fboxcli/: README.md  package.json
npm/fboxcli-darwin-arm64/: package.json
npm/fboxcli-linux-x64/: package.json
npm/fboxcli-win32-x64/: package.json
scripts/: .env.example  build.ps1  build.sh  npm-publish.ps1  npm-publish.sh
src/: config.rs  crypto.rs  i18n.rs  main.rs  output.rs
src/api/: alarm.rs  auth.rs  box_api.rs  contact.rs  control.rs  device.rs  dmon.rs  group.rs  history.rs  location.rs  mod.rs
src/cli/: alarm.rs  auth.rs  box_cmd.rs  config_cmd.rs  contact.rs  control.rs  device.rs  dmon.rs  group.rs  history.rs  location.rs  mod.rs
src/models/: alarm.rs  auth.rs  box_model.rs  contact.rs  control.rs  device.rs  dmon.rs  enums.rs  history.rs  mod.rs  serde_helper.rs
