[package]
name = "fboxcli"
version = "0.1.2"
edition = "2024"
description = "Agent-native CLI for FBox IoT platform API"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "form"] }
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
anyhow = "1.0"
tabled = "0.20"
toml = "1.1"
dirs = "6.0"
time = { version = "0.3", features = [
    "serde",
    "formatting",
    "parsing",
    "macros",
] }
uuid = { version = "1.23", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.10"
sha2 = "0.11"
sys-locale = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
